Refactor CMakeLists.txt and main.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ find_package(raylib 5.0 REQUIRED)
 
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp)
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+include_directories(src) # No include directory today lmao.
+include_directories(dependencies/raylib-cpp/include)
 
-target_include_directories(${PROJECT_NAME} PRIVATE dependencies/raylib-cpp/include)
-target_include_directories(${PROJECT_NAME} PRIVATE src) # No include directory today lmao.
+add_executable(${PROJECT_NAME} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME} raylib)
