Add assets and update Cmake Lists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@
 cmake_minimum_required(VERSION 3.23)
 project(raylib_project)
 
+# On build copy the assets folder to the build directory
+file(COPY assets DESTINATION ${CMAKE_BINARY_DIR})
+
 find_package(raylib 5.0 REQUIRED)
 
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp)
