Add Debug and Basic Camera and player

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,13 @@ find_package(raylib 5.0 REQUIRED)
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp)
 
 include_directories(src) # No include directory today lmao.
+include_directories(dependencies/raygui/src)
 include_directories(dependencies/raylib-cpp/include)
 include_directories(dependencies/voronoi/src)
 include_directories(dependencies/entt/src) # Header only library ECS :)
+
+# Set it so Wfatal-errors is on by default
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wfatal-errors")
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
