--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,8 @@
         "thread": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "string.h": "c"
+        "string.h": "c",
+        "unordered_set": "cpp",
+        "regex": "cpp"
     }
 }
