--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,15 @@
         "variant": "cpp",
         "string.h": "c",
         "unordered_set": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "bitset": "cpp",
+        "condition_variable": "cpp",
+        "cstring": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "fstream": "cpp",
+        "iostream": "cpp",
+        "shared_mutex": "cpp",
+        "cinttypes": "cpp"
     }
 }
