Refactor and fix projectiles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,6 @@
         "iostream": "cpp",
         "shared_mutex": "cpp",
         "cinttypes": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
