--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@
 cmake_minimum_required(VERSION 3.23)
 project(raylib_project)
 
+
 # On build copy the assets folder to the build directory
 file(COPY assets DESTINATION ${CMAKE_BINARY_DIR})
 
@@ -16,6 +17,7 @@ include_directories(dependencies/raylib-cpp/include)
 include_directories(dependencies/entt/src) # Header only library ECS :)
 include_directories(dependencies/wfc-cpp/src) # Header only library WFC :)
 include_directories(dependencies/delaunator-cpp/include) # Header only library Delaunator :)
+include_directories(dependencies/cereal/include) # Header only library Serialization :)
 
 # Set it so Wfatal-errors is on by default
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wfatal-errors")
@@ -26,6 +28,8 @@ add_executable(${PROJECT_NAME} ${SOURCES})
 list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 # Add a tileset tool 
 add_executable(tileset_tool ${SOURCES} tools/tileset_tool.cpp)
+add_executable(particle_designer ${SOURCES} tools/particle_designer.cpp)
 
 target_link_libraries(${PROJECT_NAME} raylib)
 target_link_libraries(tileset_tool raylib)
+target_link_libraries(particle_designer raylib)
