--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,7 +90,9 @@
         "__tree": "cpp",
         "__verbose_abort": "cpp",
         "ios": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "*.ipp": "cpp",
+        "locale": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
